# tp_final_taller_g13

./: .gitignore  .pre-commit-config.yaml  .valgrindrc  CMakeLists.txt  Makefile  README.md  client  dibujo.drawio  falopa.txt  installer.sh  qt.supp  server
client/: protocol_client.cpp
client_gui/: CMakeLists.txt  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  box.cpp  box.h  chooseoptionwindow.cpp  chooseoptionwindow.h  chooseoptionwindow.ui  connectionwindow.cpp  connectionwindow.h  connectionwindow.ui  editor.cpp  editor.h  editor.ui  joingame.cpp  joingame.h  joingame.ui  joingamewindow.cpp  joingamewindow.h  joingamewindow.ui  loadingscreen.cpp  loadingscreen.h  loadingscreen.ui  loadingwindow.cpp  loadingwindow.ui  loadingwindow_copy.h  newgamewindow.cpp  newgamewindow.h  newgamewindow.ui  resources.qrc
client_src/: client.cpp  client.h  client_main.cpp  duck_view.cpp  duck_view.h  front.h  game_view.cpp  game_view.h  gear_view.cpp  gear_view.h  joinable_games_finder.cpp  joinable_games_finder.h  message.cpp  message.h  protocol_client.cpp  protocol_client.h  receiver.cpp  receiver.h  sender.cpp  sender.h  usableMapsFinder.cpp  usableMapsFinder.h  waiting_view.cpp  waiting_view.h
common/: game_snapshot.cpp  liberror.h  resolver.h  resolvererror.h  socket.cpp
common_src/: DTOs.h  action_t.h  command.h  command_info.h  duck_DTO.h  duck_info_t.h  game_snapshot.cpp  game_snapshot.h  game_snapshot_t.h  protocol.cpp  protocol.h  protocol_client.h  queue.h  socket.h  thread.h  translator_DTOs.h  translator_actions.cpp  translator_actions.h
configuration yamls/: default_config.yaml
configuration_yamls/: custom_map.yaml  default_config.yaml  default_map_config.yaml  game_config.cpp  game_config.h  parser_singleton.cpp  parser_singleton.h  parser_yaml.cpp  parser_yaml.h  practice_config.yaml
editor/: editor.cpp  editor.h  editor.ui  main.cpp  resources copy.qrc  resources.qrc
editor_src/: editor.cpp  editor.h  editor.ui  editor_resource.qrc  main.cpp  structure.cpp  structure.h
gui/: CMakeLists.txt  README.md  main.cpp  resources.qrc  startWindow.cpp  startWindow.h  startWindow.ui
maps/: custom_map2.yaml  custom_map3.yaml  default_map.yaml  practice_map.yaml
sdl_test/: README.md  test  test.cpp
server_src/: Acceptor.cpp  Acceptor.h  ListOfClientsMonitor.cpp  ListOfClientsMonitor.h  ProtocolServer.cpp  ProtocolServer.h  acceptor.cpp  acceptor.h  acceptor_thread.cpp  acceptor_thread.h  action.h  action_t.h  client_handler.cpp  client_handler.h  duck.cpp  duck.h  duck_creator.cpp  game_snapshot_t.h  game_thread.cpp  game_thread.h  games_manager.cpp  games_manager.h  list_of_clients_monitor.cpp  list_of_clients_monitor.h  lobby.cpp  lobby.h  main.cpp  message.h  player_commands.h  protocol_lobby.cpp  protocol_lobby.h  protocol_server.cpp  protocol_server.h  receiver_thread.h  sender_thread.h  server.cpp  server.h  server_main.cpp  thread_safe_list.h
server_src/actions/: action.h  client_action_t.h  duck_creator.cpp  duck_creator.h  i_quit.cpp  i_quit.h  player_commands.h
server_src/game_model/: Armour.h  Duck.cpp  Duck.h  Equipment.h  Explosive.h  Weapon.h  armor.cpp  armor.h  box.cpp  box.h  duck.cpp  duck.h  duck_test.cpp  game.cpp  game.h  game_secondary_functions.cpp  helmet.cpp  helmet.h  hitbox.cpp  hitbox.h  map.cpp  map.h  map_game.cpp  map_game.h  map_game_secondary_functions.cpp  objectGame.h  pickable.cpp  pickable.h  position.cpp  position.h  positionable.cpp  positionable.h  tile.cpp  tile.h  weapon.cpp  weapon.h
server_src/game_model/weapon/: armor.cpp  armor.h  banana.cpp  banana.h  fake_weapon.h  grenade.cpp  grenade.h  helmet.cpp  helmet.h  weapon.cpp  weapon.h  weapon_factory.cpp  weapon_factory.h
server_src/game_model/weapon/bullets_strategy/: AKBullet.cpp  AKBullet.h  bullet.cpp  bullet.h  bullet_factory.h  bullet_interface.cpp  bullet_interface.h  explotion.cpp  explotion.h  fmj_bullet.cpp  fmj_bullet.h  laser.cpp  laser.h  pellet.cpp  pellet.h
server_src/game_model/weapon/weapons_strategy/: ak_47.cpp  ak_47.h  cowboy_pistol.cpp  cowboy_pistol.h  dueling_pistol.cpp  dueling_pistol.h  grenade.cpp  grenade.h  laser_rifle.cpp  laser_rifle.h  magnum.cpp  magnum.h  no_weapon.h  pew_pew.cpp  pew_pew.h  shotgun.cpp  shotgun.h  sniper.cpp  sniper.h  weapon.cpp  weapon.h  weapon_factory.cpp  weapon_factory.h  weapon_interface.cpp  weapon_interface.h
tests/: CMakeLists.txt
tests_src/: CMakeLists.txt  duck_test.cpp  test_duck.cpp  test_game.cpp  test_hitbox.cpp  test_main.cpp  test_position.cpp  test_protocols.cpp
ui/: front.h  main.cpp  test  test.cpp
